--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.probuilder": "4.5.2",
+    "com.unity.render-pipelines.universal": "10.4.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.7",
