--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,8 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "1.15.7",
     "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.12",
-    "com.unity.ide.vscode": "1.2.4",
+    "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.inputsystem": "1.2.0",
     "com.unity.probuilder": "4.5.2",
     "com.unity.render-pipelines.universal": "10.8.1",
@@ -11,6 +10,8 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.openxr": "1.3.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
