Add captcha code tests

--- a/Assets/Tests/EditMode/EditMode.asmdef
+++ b/Assets/Tests/EditMode/EditMode.asmdef
@@ -1,14 +1,14 @@
 {
-    "name": "Tests",
+    "name": "EditMode",
     "rootNamespace": "SBEPIS.Tests",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "SBEPIS.TestScenes",
-        "SBEPIS.Thaumaturgy",
         "SBEPIS.Utils"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
