Add actual grabby tests

--- a/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "EditMode",
-    "rootNamespace": "SBEPIS.Tests",
+    "name": "SBEPIS.Tests.Editor",
+    "rootNamespace": "SBEPIS.Tests.Editor",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
