--- a/Assets/SBEPIS/Interaction/SBEPIS.Interaction.asmdef
+++ b/Assets/SBEPIS/Interaction/SBEPIS.Interaction.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "SBEPIS.Interaction",
     "references": [
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:4847341ff46394e83bb78fbd0652937e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
