Write capturllection tests

--- a/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
+++ b/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "SBEPIS.Thaumaturgy",
-    "rootNamespace": "SBEPIS.Thaumaturgy",
+    "name": "SBEPIS.Capturllection",
+    "rootNamespace": "SBEPIS.Capturllection",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
