--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -9,7 +9,8 @@
         "SBEPIS.Interaction",
         "Unity.InputSystem",
         "Unity.InputSystem.TestFramework",
-        "Unity.XR.OpenXR"
+        "Unity.XR.OpenXR",
+        "SBEPIS.Capturllection"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
