Turn bits into enums and add rule system

--- a/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
+++ b/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "SBEPIS.Items",
     "rootNamespace": "SBEPIS.Items",
-    "references": [],
+    "references": [
+        "GUID:9171e132a65e74941900104cb4b78bed"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
