--- a/Assets/SBEPIS/Thaumaturgy/SBEPIS.Thaumaturgy.asmdef
+++ b/Assets/SBEPIS/Thaumaturgy/SBEPIS.Thaumaturgy.asmdef
@@ -2,7 +2,8 @@
     "name": "SBEPIS.Thaumaturgy",
     "rootNamespace": "SBEPIS.Thaumaturgy",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:c31ef34312727da4e8dd6680f7142365"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
