Start on compound rigidbodies

--- a/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
+++ b/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
@@ -2,7 +2,8 @@
     "name": "SBEPIS.Items",
     "rootNamespace": "SBEPIS.Items",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:18efb28f6c4ced44695e8a96a6df0cf1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
