--- a/Assets/SBEPIS/Thaumaturgy/SBEPIS.Thaumaturgy.asmdef
+++ b/Assets/SBEPIS/Thaumaturgy/SBEPIS.Thaumaturgy.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "SBEPIS.Thaumaturgy",
     "references": [
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:c31ef34312727da4e8dd6680f7142365"
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:18efb28f6c4ced44695e8a96a6df0cf1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
