--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -10,7 +10,8 @@
         "Unity.InputSystem",
         "Unity.InputSystem.TestFramework",
         "Unity.XR.OpenXR",
-        "SBEPIS.Capturllection"
+        "SBEPIS.Capturllection",
+        "SBEPIS.Items"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
