--- a/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "SBEPIS.Utils"
+        "SBEPIS.Utils",
+        "SBEPIS.Items"
     ],
     "includePlatforms": [
         "Editor"
