--- a/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
+++ b/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
@@ -5,7 +5,8 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:c31ef34312727da4e8dd6680f7142365"
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:18efb28f6c4ced44695e8a96a6df0cf1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
