Make a hand joint system that doesn't *suck*

--- a/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
+++ b/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "SBEPIS.Utils",
     "rootNamespace": "SBEPIS.Utils",
-    "references": [],
+    "references": [
+        "GUID:4847341ff46394e83bb78fbd0652937e",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
