--- a/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
+++ b/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
@@ -6,7 +6,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c31ef34312727da4e8dd6680f7142365",
-        "GUID:183d128ae2460b04a8cd2f657b0a25cb"
+        "GUID:183d128ae2460b04a8cd2f657b0a25cb",
+        "GUID:d488bfb99351c36408de8cbe8298d941"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
