Rip out the pause menu and replace it with the diajector

--- a/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
+++ b/Assets/SBEPIS/Capturllection/SBEPIS.Capturllection.asmdef
@@ -7,7 +7,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c31ef34312727da4e8dd6680f7142365",
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
-        "GUID:d488bfb99351c36408de8cbe8298d941"
+        "GUID:d488bfb99351c36408de8cbe8298d941",
+        "GUID:88c6783db6844c04982e954bf323d2f6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
