--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.1",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.inputsystem": "1.4.4",
     "com.unity.probuilder": "5.0.6",
-    "com.unity.render-pipelines.universal": "13.1.8",
+    "com.unity.render-pipelines.universal": "14.0.4",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.2.1",
-    "com.unity.xr.openxr": "1.4.2",
+    "com.unity.xr.openxr": "1.5.3",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
