--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -2,21 +2,18 @@
     "name": "SBEPIS.Tests",
     "rootNamespace": "SBEPIS.Tests",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
-        "SBEPIS.Utils",
-        "Unity.InputSystem",
-        "Unity.InputSystem.TestFramework",
-        "Unity.XR.OpenXR",
-        "SBEPIS.Capturllection",
-        "SBEPIS.Items",
-        "SBEPIS.Controller",
-        "SBEPIS.Physics",
-        "SBEPIS.Thaumergy"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:dc04f38471c3a459fb4d31124ee9127d",
+        "GUID:4847341ff46394e83bb78fbd0652937e",
+        "GUID:dd786fa671340d3478c5c7468531395e",
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:183d128ae2460b04a8cd2f657b0a25cb",
+        "GUID:d488bfb99351c36408de8cbe8298d941",
+        "GUID:039826f6a7b85cf449091ef273cf8d20"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
