--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.jimmycushnie.noisynodes": "https://github.com/JimmyCushnie/Noisy-Nodes.git",
+    "com.kylewbanks.scenerefattribute": "https://github.com/KyleBanks/scene-ref-attribute.git",
     "com.unity.ai.navigation": "1.1.1",
     "com.unity.collab-proxy": "2.0.3",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.inputsystem": "1.5.1",
-    "com.unity.probuilder": "5.0.6",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
