--- a/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
+++ b/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
@@ -6,7 +6,8 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:d488bfb99351c36408de8cbe8298d941",
-        "GUID:90dc4fbf4f88b0f4fa31288b3986ce62"
+        "GUID:90dc4fbf4f88b0f4fa31288b3986ce62",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
