--- a/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
+++ b/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
@@ -6,7 +6,8 @@
         "GUID:d488bfb99351c36408de8cbe8298d941",
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:dd786fa671340d3478c5c7468531395e",
-        "GUID:d41cc298488273747a9d2e2f22939085"
+        "GUID:d41cc298488273747a9d2e2f22939085",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
