--- a/Assets/SBEPIS/Physics/SBEPIS.Physics.asmdef
+++ b/Assets/SBEPIS/Physics/SBEPIS.Physics.asmdef
@@ -2,7 +2,8 @@
     "name": "SBEPIS.Physics",
     "rootNamespace": "SBEPIS.Physics",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
