--- a/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
+++ b/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
@@ -6,7 +6,8 @@
         "GUID:d41cc298488273747a9d2e2f22939085",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c31ef34312727da4e8dd6680f7142365",
-        "GUID:dd786fa671340d3478c5c7468531395e"
+        "GUID:dd786fa671340d3478c5c7468531395e",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
