--- a/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
+++ b/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:183d128ae2460b04a8cd2f657b0a25cb"
+        "GUID:183d128ae2460b04a8cd2f657b0a25cb",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
