--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -12,7 +12,8 @@
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:d488bfb99351c36408de8cbe8298d941",
         "GUID:039826f6a7b85cf449091ef273cf8d20",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
