--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -48,7 +48,5 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "testables": [
-    "com.unity.inputsystem"
-  ]
+  "testables": []
 }
