Throw all the layouts in their own assembly

--- a/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
@@ -1,12 +1,10 @@
 {
-    "name": "SBEPIS.Capturellection.Deques",
-    "rootNamespace": "SBEPIS.Capturellection.Deques",
+    "name": "SBEPIS.Capturellection.Layouts",
+    "rootNamespace": "",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:dd786fa671340d3478c5c7468531395e",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:e74bc77b8ac27984da4d1140fa020517"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
