--- a/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
+++ b/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
@@ -7,7 +7,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:c31ef34312727da4e8dd6680f7142365",
         "GUID:dd786fa671340d3478c5c7468531395e",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
