--- a/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
@@ -6,7 +6,8 @@
         "GUID:dd786fa671340d3478c5c7468531395e",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:e74bc77b8ac27984da4d1140fa020517"
+        "GUID:e74bc77b8ac27984da4d1140fa020517",
+        "GUID:183d128ae2460b04a8cd2f657b0a25cb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
