Finish transitioning cards to Arbor, pass tests

--- a/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
+++ b/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
@@ -9,7 +9,8 @@
         "GUID:d488bfb99351c36408de8cbe8298d941",
         "GUID:88c6783db6844c04982e954bf323d2f6",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:329d7b58fe543b840b19e4c5e22d7708"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
