--- a/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
+++ b/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
@@ -7,7 +7,8 @@
         "GUID:e40ba710768534012815d3193fa296cb",
         "GUID:d488bfb99351c36408de8cbe8298d941",
         "GUID:90dc4fbf4f88b0f4fa31288b3986ce62",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
