--- a/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
+++ b/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
@@ -5,7 +5,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
