--- a/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
+++ b/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
@@ -5,7 +5,8 @@
         "GUID:4847341ff46394e83bb78fbd0652937e",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
