Add hashmap deque initial definition and hashing functions

--- a/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
@@ -7,7 +7,9 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:e74bc77b8ac27984da4d1140fa020517",
-        "GUID:183d128ae2460b04a8cd2f657b0a25cb"
+        "GUID:183d128ae2460b04a8cd2f657b0a25cb",
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:d41cc298488273747a9d2e2f22939085"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
