Add fundamentals for keyboard

--- a/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
+++ b/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
@@ -10,7 +10,8 @@
         "GUID:88c6783db6844c04982e954bf323d2f6",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a",
+        "GUID:d41cc298488273747a9d2e2f22939085"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
