--- a/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Deques/SBEPIS.Capturellection.Deques.asmdef
@@ -9,7 +9,8 @@
         "GUID:e74bc77b8ac27984da4d1140fa020517",
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:c31ef34312727da4e8dd6680f7142365",
-        "GUID:d41cc298488273747a9d2e2f22939085"
+        "GUID:d41cc298488273747a9d2e2f22939085",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
