Add fetching and more smashing of glass bottles

--- a/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
+++ b/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
@@ -6,7 +6,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a",
+        "GUID:329d7b58fe543b840b19e4c5e22d7708"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
