--- a/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:dd786fa671340d3478c5c7468531395e",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
