--- a/Assets/SBEPIS/Capturellection/Deque Deck/SBEPIS.Capturellection.DequeDeck.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque Deck/SBEPIS.Capturellection.DequeDeck.asmdef
@@ -1,11 +1,11 @@
 {
-    "name": "SBEPIS.Capturellection.Layouts",
-    "rootNamespace": "SBEPIS.Capturellection.Layouts",
+    "name": "SBEPIS.Capturellection.DequeDeck",
+    "rootNamespace": "SBEPIS.Capturellection.DequeDeck",
     "references": [
-        "GUID:dd786fa671340d3478c5c7468531395e",
+        "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:dd786fa671340d3478c5c7468531395e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
