--- a/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
+++ b/Assets/SBEPIS/Utils/SBEPIS.Utils.asmdef
@@ -7,7 +7,8 @@
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:e623bc35d2e040d4d81ac786178e2a6a",
-        "GUID:329d7b58fe543b840b19e4c5e22d7708"
+        "GUID:329d7b58fe543b840b19e4c5e22d7708",
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
