Change dynamic values to conversion values on actions

--- a/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
+++ b/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:d41cc298488273747a9d2e2f22939085",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:c31ef34312727da4e8dd6680f7142365"
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:67e3566bbb171cc4daac37ebb747617b",
+        "GUID:f88fb04354076c646a4107a491394033"
     ],
     "includePlatforms": [
         "Editor"
