--- a/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/SBEPIS.Tests.Editor.asmdef
@@ -5,7 +5,8 @@
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
         "GUID:0acc523941302664db1f4e527237feb3",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:d41cc298488273747a9d2e2f22939085"
+        "GUID:d41cc298488273747a9d2e2f22939085",
+        "GUID:67e3566bbb171cc4daac37ebb747617b"
     ],
     "includePlatforms": [
         "Editor"
