Add navmesh generation

--- a/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
+++ b/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
@@ -6,7 +6,8 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:c31ef34312727da4e8dd6680f7142365",
         "GUID:67e3566bbb171cc4daac37ebb747617b",
-        "GUID:f88fb04354076c646a4107a491394033"
+        "GUID:f88fb04354076c646a4107a491394033",
+        "GUID:33759803a11f4d538227861a78aba30b"
     ],
     "includePlatforms": [
         "Editor"
