--- a/Assets/SBEPIS/AI/SBEPIS.AI.asmdef
+++ b/Assets/SBEPIS/AI/SBEPIS.AI.asmdef
@@ -5,7 +5,8 @@
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
-        "GUID:77ccaf49895b0d64e87cd4b4faf83c49"
+        "GUID:0587ae7e38282104bb9b560ff01b0899",
+        "GUID:fad0c95a5d0ac5f41aa365bf7f562a6f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
