Make AIs walk around the mesh

--- a/Assets/SBEPIS/AI/SBEPIS.AI.asmdef
+++ b/Assets/SBEPIS/AI/SBEPIS.AI.asmdef
@@ -6,7 +6,9 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:0587ae7e38282104bb9b560ff01b0899",
-        "GUID:fad0c95a5d0ac5f41aa365bf7f562a6f"
+        "GUID:fad0c95a5d0ac5f41aa365bf7f562a6f",
+        "GUID:d488bfb99351c36408de8cbe8298d941",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
