--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ opt-level = 3
 [dependencies]
 bevy = "0.11.2"
 bevy-inspector-egui = "0.19.0"
+bevy_egui = "0.21.0"
 bevy_xpbd_3d = "0.2.0"
+egui = "0.22.0"
+egui_dock = "0.7.3"
