--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,13 @@ opt-level = 3
 [dependencies]
 bevy = "0.11.2"
 bevy-inspector-egui = "0.19.0"
+bevy_asset = "0.11.2"
 bevy_egui = "0.21.0"
+bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
+bevy_reflect = "0.11.2"
+bevy_render = "0.11.2"
+bevy_window = "0.11.2"
 bevy_xpbd_3d = "0.2.0"
 egui = "0.22.0"
+egui-gizmo = "0.11.0"
 egui_dock = "0.7.3"
