Rename ui to editor and add an editor feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ name = "sbepis-bevy"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["editor_mode"]
+editor_mode = []
 
 # Enable max optimizations for dependencies, but not for our code:
 [profile.dev.package."*"]
