--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ bevy-inspector-egui = "0.19.0"
 bevy_asset = "0.11.2"
 bevy_egui = "0.21.0"
 bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
+bevy_panorbit_camera = "0.8.0"
 bevy_reflect = "0.11.2"
 bevy_render = "0.11.2"
 bevy_window = "0.11.2"
