Add title and icon to window

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,10 @@ bevy_panorbit_camera = "0.8.0"
 bevy_reflect = "0.11.2"
 bevy_render = "0.11.2"
 bevy_window = "0.11.2"
+bevy_winit = "0.11.2"
 bevy_xpbd_3d = "0.2.0"
 egui = "0.22.0"
 egui-gizmo = "0.11.0"
 egui_dock = "0.7.3"
+image = "0.24.7"
+winit = "0.28.6"
