Draw visible staff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["editor_mode"]
+default = []
 editor_mode = []
 
 # Enable max optimizations for dependencies, but not for our code:
