--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ egui = "0.22.0"
 egui-gizmo = "0.11.0"
 egui_dock = "0.7.3"
 image = "0.24.7"
+num-traits = "0.2.17"
 winit = "0.28.6"
 
 [build-dependencies]
