--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ opt-level = 3
 bevy = "0.11.2"
 bevy-inspector-egui = "0.19.0"
 bevy_asset = "0.11.2"
-bevy_audio = { version = "0.11.3", features = ["wav"] }
+bevy_audio = { version = "0.11.3", features = ["wav", "mp3"] }
 bevy_egui = "0.21.0"
 bevy_input = "0.11.3"
 bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
