Remove weird additional Bevy dependencies Fixes #28

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,18 +13,11 @@ spawn_debug_notes_on_staff = []
 opt-level = 3
 
 [dependencies]
-bevy = "0.11.2"
+bevy = { version = "0.11.2", features = ["wav", "mp3"] }
 bevy-inspector-egui = "0.19.0"
-bevy_asset = "0.11.2"
-bevy_audio = { version = "0.11.3", features = ["wav", "mp3"] }
 bevy_egui = "0.21.0"
-bevy_input = "0.11.3"
 bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
 bevy_panorbit_camera = "0.8.0"
-bevy_reflect = "0.11.2"
-bevy_render = "0.11.2"
-bevy_window = "0.11.2"
-bevy_winit = "0.11.2"
 bevy_xpbd_3d = "0.2.0"
 egui = "0.22.0"
 egui-gizmo = "0.11.0"
