--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = []
-editor_mode = []
+default = ["inspector"]
+inspector = []
 spawn_debug_notes_on_staff = []
 
 # Enable max optimizations for dependencies, but not for our code:
@@ -21,7 +21,6 @@ bevy_panorbit_camera = "0.8.0"
 bevy_xpbd_3d = "0.2.0"
 egui = "0.22.0"
 egui-gizmo = "0.11.0"
-egui_dock = "0.7.3"
 image = "0.24.7"
 num-traits = "0.2.17"
 winit = "0.28.6"
