--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-debug = ["inspector"]
-default = []
-inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera/bevy_egui"]
+debug = ["inspector", "overview_camera"]
+default = ["debug"]
+inspector = ["dep:bevy-inspector-egui", "bevy_panorbit_camera?/bevy_egui"]
+overview_camera = ["dep:bevy_panorbit_camera"]
 spawn_debug_notes_on_staff = []
 
 # Enable max optimizations for dependencies, but not for our code:
@@ -16,7 +17,7 @@ opt-level = 3
 [dependencies]
 bevy = { version = "0.11.2", features = ["wav", "mp3"] }
 bevy-inspector-egui = { version = "0.19.0", optional = true }
-bevy_panorbit_camera = "0.8.0"
+bevy_panorbit_camera = { version = "0.8.0", optional = true }
 bevy_xpbd_3d = "0.2.0"
 image = "0.24.7"
 num-traits = "0.2.17"
