--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ bevy-trait-query = "0.3.0"
 bevy_panorbit_camera = { version = "0.8.0", optional = true }
 bevy_xpbd_3d = "0.2.0"
 image = "0.24.7"
+itertools = "0.11.0"
 num-traits = "0.2.17"
 winit = "0.28.6"
 
