--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ bevy_panorbit_camera = { version = "0.9.0", optional = true }
 bevy_xpbd_3d = "0.3.1"
 image = "0.24.7"
 itertools = "0.11.0"
-leafwing-input-manager = "0.11.1"
+leafwing-input-manager = { version = "0.11.1", git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "42b0b21" }
 num-traits = "0.2.17"
-winit = "0.29.3"
+winit = "0.28.7"
 
 [build-dependencies]
 winres = "0.1"
