Add unity files to gitattributes with lf line endings

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,22 @@
 *.meta linguist-generated
 *.prefab linguist-generated
 *.unity linguist-generated
+
+# Declare unity data files that will always have LF line endings on checkout.
+*.sln text eol=crlf
+*.csproj text eol=crlf
+*.anim text eol=lf
+*.asmdef text eol=lf
+*.asset text eol=lf
+*.controller text eol=lf
+*.mat text eol=lf
+*.meta text eol=lf
+*.overrideController text eol=lf
+*.prefab text eol=lf
+*.preset text eol=lf
+*.spriteatlas text eol=lf
+*.unity text eol=lf
+*.mixer text eol=lf
+*.renderTexture text eol=lf
+*.json text eol=lf
+*.xml text eol=lf
