--- a/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
+++ b/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "GUID:d41cc298488273747a9d2e2f22939085",
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:c31ef34312727da4e8dd6680f7142365"
+        "GUID:c31ef34312727da4e8dd6680f7142365",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:4847341ff46394e83bb78fbd0652937e"
     ],
     "includePlatforms": [
         "Editor"
