Add command tests and separate things into events

--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -11,7 +11,8 @@
         "GUID:d488bfb99351c36408de8cbe8298d941",
         "GUID:039826f6a7b85cf449091ef273cf8d20",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:e2fdad946878df44fb03bfaadbd96c3b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
