--- a/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
+++ b/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
@@ -7,7 +7,8 @@
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:dd786fa671340d3478c5c7468531395e",
         "GUID:d41cc298488273747a9d2e2f22939085",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
