Finish the alchemy station and completely rework how tag append rules are stored
Closes #127

--- a/Assets/SBEPIS/Bits/SBEPIS.Bits.asmdef
+++ b/Assets/SBEPIS/Bits/SBEPIS.Bits.asmdef
@@ -2,7 +2,8 @@
     "name": "SBEPIS.Bits",
     "rootNamespace": "SBEPIS.Bits",
     "references": [
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
