Add references to TME to the assemblies

--- a/Assets/SBEPIS/Bits/SBEPIS.Bits.asmdef
+++ b/Assets/SBEPIS/Bits/SBEPIS.Bits.asmdef
@@ -3,14 +3,15 @@
     "rootNamespace": "SBEPIS.Bits",
     "references": [
         "GUID:9171e132a65e74941900104cb4b78bed",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
