--- a/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
+++ b/Assets/SBEPIS/Capturellection/SBEPIS.Capturellection.asmdef
@@ -11,14 +11,15 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:e623bc35d2e040d4d81ac786178e2a6a",
-        "GUID:d41cc298488273747a9d2e2f22939085"
+        "GUID:d41cc298488273747a9d2e2f22939085",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
