--- a/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
+++ b/Assets/SBEPIS/Editor/SBEPIS.Editor.asmdef
@@ -7,7 +7,8 @@
         "GUID:c31ef34312727da4e8dd6680f7142365",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:4847341ff46394e83bb78fbd0652937e"
+        "GUID:4847341ff46394e83bb78fbd0652937e",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [
         "Editor"
@@ -16,7 +17,7 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
