--- a/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
+++ b/Assets/SBEPIS/Thaumergy/SBEPIS.Thaumergy.asmdef
@@ -8,14 +8,15 @@
         "GUID:c31ef34312727da4e8dd6680f7142365",
         "GUID:dd786fa671340d3478c5c7468531395e",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
