--- a/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
+++ b/Assets/SBEPIS/UI/SBEPIS.UI.asmdef
@@ -6,7 +6,8 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
