--- a/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
+++ b/Assets/Tests/Runtime/SBEPIS.Tests.asmdef
@@ -12,7 +12,8 @@
         "GUID:039826f6a7b85cf449091ef273cf8d20",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:e2fdad946878df44fb03bfaadbd96c3b"
+        "GUID:e2fdad946878df44fb03bfaadbd96c3b",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
