--- a/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
+++ b/Assets/SBEPIS/Capturellection/Deque/Layouts/SBEPIS.Capturellection.Layouts.asmdef
@@ -5,14 +5,15 @@
         "GUID:dd786fa671340d3478c5c7468531395e",
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:33759803a11f4d538227861a78aba30b"
+        "GUID:33759803a11f4d538227861a78aba30b",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
