--- a/Assets/SBEPIS/Commands/SBEPIS.Commands.asmdef
+++ b/Assets/SBEPIS/Commands/SBEPIS.Commands.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:9171e132a65e74941900104cb4b78bed"
+        "GUID:9171e132a65e74941900104cb4b78bed",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
