--- a/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
+++ b/Assets/SBEPIS/Controller/SBEPIS.Controller.asmdef
@@ -9,7 +9,8 @@
         "GUID:90dc4fbf4f88b0f4fa31288b3986ce62",
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:e623bc35d2e040d4d81ac786178e2a6a",
-        "GUID:4847341ff46394e83bb78fbd0652937e"
+        "GUID:4847341ff46394e83bb78fbd0652937e",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
