--- a/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
+++ b/Assets/SBEPIS/Items/SBEPIS.Items.asmdef
@@ -7,14 +7,15 @@
         "GUID:183d128ae2460b04a8cd2f657b0a25cb",
         "GUID:d41cc298488273747a9d2e2f22939085",
         "GUID:33759803a11f4d538227861a78aba30b",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
