--- a/Assets/SBEPIS/Physics/SBEPIS.Physics.asmdef
+++ b/Assets/SBEPIS/Physics/SBEPIS.Physics.asmdef
@@ -5,14 +5,15 @@
         "GUID:9171e132a65e74941900104cb4b78bed",
         "GUID:33759803a11f4d538227861a78aba30b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:e623bc35d2e040d4d81ac786178e2a6a"
+        "GUID:e623bc35d2e040d4d81ac786178e2a6a",
+        "GUID:ff96c7fca78536142a1ab9d7eb0b00bf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
