Finish importing Echinda

--- a/SBEPIS/SBEPIS.csproj
+++ b/SBEPIS/SBEPIS.csproj
@@ -8,7 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Echidna2\Echidna2.Core\Echidna2.Core.csproj" />
       <ProjectReference Include="..\..\Echidna2\Echidna2.Mathematics\Echidna2.Mathematics.csproj" />
+      <ProjectReference Include="..\..\Echidna2\Echidna2.Rendering\Echidna2.Rendering.csproj" />
     </ItemGroup>
 
 </Project>
