Fix rotations and normals being wrong

--- a/SBEPIS/SBEPIS.csproj
+++ b/SBEPIS/SBEPIS.csproj
@@ -13,6 +13,7 @@
       <ProjectReference Include="..\..\Echidna2\Echidna2.Physics\Echidna2.Physics.csproj" />
       <ProjectReference Include="..\..\Echidna2\Echidna2.Rendering3D\Echidna2.Rendering3D.csproj" />
       <ProjectReference Include="..\..\Echidna2\Echidna2.Rendering\Echidna2.Rendering.csproj" />
+      <ProjectReference Include="..\..\Echidna2\Echidna2.SourceGenerators\Echidna2.SourceGenerators.csproj" OutputItemType="Analyzer" />
     </ItemGroup>
 
 </Project>
