--- a/SBEPIS/SBEPIS.csproj
+++ b/SBEPIS/SBEPIS.csproj
@@ -20,12 +20,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Echidna2\Echidna2.Core\Echidna2.Core.csproj" />
-      <ProjectReference Include="..\..\Echidna2\Echidna2.Mathematics\Echidna2.Mathematics.csproj" />
-      <ProjectReference Include="..\..\Echidna2\Echidna2.Physics\Echidna2.Physics.csproj" />
-      <ProjectReference Include="..\..\Echidna2\Echidna2.Rendering3D\Echidna2.Rendering3D.csproj" />
-      <ProjectReference Include="..\..\Echidna2\Echidna2.Rendering\Echidna2.Rendering.csproj" />
-      <ProjectReference Include="..\..\Echidna2\Echidna2.SourceGenerators\Echidna2.SourceGenerators.csproj" OutputItemType="Analyzer" />
+      <ProjectReference Include="..\Echidna2\Echidna2.Core\Echidna2.Core.csproj" />
+      <ProjectReference Include="..\Echidna2\Echidna2.Mathematics\Echidna2.Mathematics.csproj" />
+      <ProjectReference Include="..\Echidna2\Echidna2.Physics\Echidna2.Physics.csproj" />
+      <ProjectReference Include="..\Echidna2\Echidna2.Rendering3D\Echidna2.Rendering3D.csproj" />
+      <ProjectReference Include="..\Echidna2\Echidna2.Rendering\Echidna2.Rendering.csproj" />
+      <ProjectReference Include="..\Echidna2\Echidna2.SourceGenerators\Echidna2.SourceGenerators.csproj" OutputItemType="Analyzer" />
     </ItemGroup>
 
     <ItemGroup>
