--- a/SBEPIS/SBEPIS.csproj
+++ b/SBEPIS/SBEPIS.csproj
@@ -32,6 +32,9 @@
         <Content Include="Assets\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="Prefabs\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
