Move SBEPIS scene to Echidna

--- a/SBEPIS/Prefabs/Scene.toml
+++ b/SBEPIS/Prefabs/Scene.toml
@@ -1,7 +1,7 @@
 ﻿[1]
-Component = "SBEPIS.Scene, SBEPIS"
+Component = "Echidna2.Rendering.Scene, Echidna2.Rendering"
 Hierarchy = "7"
-Player = "2"
+CameraHaver = "2"
 
 [2]
 Prefab = "Player.toml"
